T-6683: theme/totara/styles_ie6.css: added IE6 css to fix overlapping fields

--- a/theme/totara/styles_ie6.css
+++ b/theme/totara/styles_ie6.css
@@ -40,3 +40,7 @@ body#course-user .section {
 div#footer {
     position: relative;
 }
+
+.fcontainer .fitem input {
+    margin-left: 2px;
+}
